fixed{  section being behind header - well not anymore }

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,11 @@ body {
 
 header{
     position: fixed;
-    height: 20%;
     background-image: url(https://i.ytimg.com/vi/NruZ5vzRhQ4/maxresdefault.jpg);
-    width: 100%;
     border-bottom: black solid 3px;
+    height: 20%;
+    width: 100%;
+    top: 0;
 }
 
 #wallpaper{
@@ -62,7 +63,6 @@ form{
 }
 
 section{
-    position: static;
     border: 3px solid #000000;
     border-radius: 5px;
     width: 80%;
@@ -82,7 +82,7 @@ section{
 }
 
 #first-section{
-    /*margin-top: 200px;*/
+    margin-top: 200px;
 }
 
 /* RIBBON */
